tests/react_refinements/react_refinements.exp
Error ----------------------------------------------------------------------------------------------------- test.js:16:6

Cannot cast `x` to number because null [1] is incompatible with number [2]. [incompatible-type]

   test.js:16:6
   16|     {x as number /* should fail */}
            ^

References:
   test.js:15:15
   15|     <F x={x = null, 42}/>
                     ^^^^ [1]
   test.js:16:11
   16|     {x as number /* should fail */}
                 ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:22:6

Cannot cast `x` to number because null [1] is incompatible with number [2]. [incompatible-type]

   test.js:22:6
   22|     {x as number /* should fail */}
            ^

References:
   test.js:21:13
   21|   <F x={x = null, 42}>
                   ^^^^ [1]
   test.js:22:11
   22|     {x as number /* should fail */}
                 ^^^^^^ [2]



Found 2 errors
